Utilizando ID em CSS

--- a/modulo2/aula8.2/style.css
+++ b/modulo2/aula8.2/style.css
@@ -19,13 +19,13 @@ main {
 }
 
 h1 {
-    color: #E5E5E5;
+    color: #776D5A;
     text-align: center;
-    text-shadow: 1px 1px 2px #e5e5e581;
+    text-shadow: 1px 1px 2px #524e4e2c;
 }
 
 h2 {
-    color: #776D5A;
+    color: #afa28a;
 }
 
 p {
