--- a/desafios/desafio10-modulo2/style.css
+++ b/desafios/desafio10-modulo2/style.css
@@ -32,7 +32,39 @@ article {
     background-color: rgb(255, 255, 255);
     width: 1450px;
     margin: auto;
-    box-shadow: 3px 5px 7px 0px rgba(0, 0, 0, 0.315);;
+    box-shadow: 3px 5px 7px 0px rgba(0, 0, 0, 0.315);
+}
+
+article#sec {
+    background-color: rgba(26,92,57,255);
+    width: 1450px;
+    margin: auto;
+    box-shadow: 3px 5px 7px 0px rgba(0, 0, 0, 0.315);
+}
+
+article#terc {
+    background-color: rgb(255, 255, 255);
+    width: 1450px;
+    margin: auto;
+    box-shadow: 3px 5px 7px 0px rgba(0, 0, 0, 0.315);
+    border-radius: 0px 0px 6px 6px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-bottom: 20px;
+}
+
+/* article > section#quat {
+    background-color: rgba(26,92,57,255);
+    width: 1450px;
+    margin: auto;
+    box-shadow: 3px 5px 7px 0px rgba(0, 0, 0, 0.315);
+    border-radius: 0px 0px 6px 6px;
+} */
+
+div{
+    background-color: rgba(132,224,173,255);
+    width: 1420px;
+    margin: auto;
 }
 
 footer {
@@ -73,6 +105,14 @@ h2 {
     margin-left: 15px;
 }
 
+h2#section {
+    background-color: #298554;
+    color: white;
+    padding: 10px;
+    width: 1400px;
+    border-radius: 6px 6px 0px 0px;
+}
+
 h4 {
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
@@ -84,3 +124,6 @@ p {
     margin: 15px;
 }
 
+p#div{
+    padding: 10px 5px 10px 5px;
+}
