--- a/desafios/desafio10-modulo2/style.css
+++ b/desafios/desafio10-modulo2/style.css
@@ -1,19 +1,29 @@
 @charset "UTF-08";
 
+@font-face {
+    font-family: 'Idroid';
+    src: url('fontes/idroid.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     margin: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgba(132,224,173,255)
+    font-family: Arial, Times, sans-serif;
+    background-color: rgba(132,224,173,255);
 }
 
 header {
-    background-color: rgba(26,92,57,255);
     height: 200px;
+    background-image: linear-gradient(to top, #1a5736 80%, #3ace80);
+    background-attachment: fixed;
+    box-shadow: 3px 5px 7px 0px rgba(0, 0, 0, 0.315);
 }
 
 header > nav {
     margin: 10px;
     padding-top: 35px;
+    width: 500px;
 }
 
 nav > a {
@@ -36,10 +46,12 @@ article {
 }
 
 article#sec {
-    background-color: rgba(26,92,57,255);
+    background-color: #1a5c38;
     width: 1450px;
+    height: 700px;
     margin: auto;
     box-shadow: 3px 5px 7px 0px rgba(0, 0, 0, 0.315);
+    padding-top: 0.5px;
 }
 
 article#terc {
@@ -53,18 +65,11 @@ article#terc {
     margin-bottom: 20px;
 }
 
-/* article > section#quat {
-    background-color: rgba(26,92,57,255);
-    width: 1450px;
-    margin: auto;
-    box-shadow: 3px 5px 7px 0px rgba(0, 0, 0, 0.315);
-    border-radius: 0px 0px 6px 6px;
-} */
-
 div{
-    background-color: rgba(132,224,173,255);
+    background-color: #c5ebd6;
     width: 1420px;
     margin: auto;
+    padding: 3px 0px 3px 0px;
 }
 
 footer {
@@ -81,7 +86,6 @@ footer > a {
     text-decoration: none;
     font-weight: bold;
     color: rgb(255, 255, 255);
-    font-style: italic;
 }
 
 footer > a:hover {
@@ -96,17 +100,24 @@ h1{
 }
 
 h1#h1secundario {
-    color: rgba(26,92,57,255)
+    color: #277e50;
+    font-family: 'Idroid', Times, serif;
+    text-align: left;
+    font-size: 30px;
 }
 
 h2 {
     text-align: left;
     color: #298554;
     margin-left: 15px;
+    background-color: #e5f6ec;
+    padding-left: 10px;
+    font-family: 'Idroid', Times, serif;
 }
 
 h2#section {
-    background-color: #298554;
+    font-family: Arial, Times, sans-serif;
+    background-color: #2fa865;
     color: white;
     padding: 10px;
     width: 1400px;
@@ -122,8 +133,4 @@ h4 {
 p {
     text-align: justify;
     margin: 15px;
-}
-
-p#div{
-    padding: 10px 5px 10px 5px;
 }
