--- a/desafios/desafio10-modulo2/style.css
+++ b/desafios/desafio10-modulo2/style.css
@@ -40,7 +40,7 @@ nav {
 }
 
 nav > a {
-    color: white;
+    color: var(--cor1);
     padding: 10px;
     text-decoration: none;
     font-weight: bold;
@@ -64,12 +64,28 @@ main {
     border-radius: 0px 0px 10px 10px;
 }
 
+div.video {
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 56.5%; /*porcentagem correta para tirar a faixa preta lateral do vídeo*/
+    position: relative;
+}
+
+div.video > iframe{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+
 main img{
     width: 100%;
 }
 
 main img.pequena{
-    width: 50%;
+    max-width: 350px;
     display: block;
     margin: auto;
 }
@@ -79,13 +95,45 @@ body{
     font-family: var(--fonte-padrao);
 }
 
+a.externo::after{
+    content: '\00A0\1F517';
+}
+
+aside{
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.192);
+}
+
+aside > ul {
+    list-style-type: '\2714\00A0\00A0'; /*botar o sinal de check na lista, esse 00A0 é o espaço entre o check a escrita*/
+    list-style-position: inside;
+    columns: 2;
+}
+
 footer {
     background-color: var(--cor5);
     color: white;
+    text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
+    font-family: var(--fonte-padrao);
+}
+
+footer a{
+    color: var(--cor0);
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+footer a:hover{
+    color: var(--cor4);
 }
 
 header > h1 {
     color: white;
+    font-weight: normal;
     font-family: var(--fonte-destaque);
     margin-bottom: 20px;
     font-size: 3em;
@@ -100,13 +148,54 @@ header > p {
     margin: auto;
     padding: 0px 10px 0px 10px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.212);
+    margin-bottom: 20px;
 }
 
 main h1 {
     color: var(--cor5);
     font-family: var(--fonte-idroid);
+    font-weight: normal;
+    font-size: 1.8em;
 }
 
 main h2 {
     font-family: var(--fonte-idroid);
+    font-weight: normal;
+    color: var(--cor4);
+    font-size: 1.3em;
+    background-image: linear-gradient(to right, var(--cor1), transparent);
+    text-indent: 8px;
+}
+
+main p{
+    margin: 15px 0px;
+    text-indent: 30px; /* recuo no começo do parágrafo */
+    text-align: justify;
+    line-height: 2em; /*altura entre linhas */
+}
+
+main strong {
+    color: var(--cor4);
+    font-weight: bold;
+}
+
+main a{
+    text-decoration: none;
+    color: var(--cor5);
+    background-color: var(--cor1);
+    padding: 2px 5px;
+    font-weight: bolder;
+}
+
+main a:hover{
+    text-decoration: underline;
+    color: var(--cor4);
+}
+
+aside > h3{
+    background-color: var(--cor4);
+    color: white;
+    padding: 10px;
+    margin: -10px -10px 0px -10px; /*o sinal de - é pra crescer/engordar a margem*/
+    border-radius: 10px 10px 0px 0px;
 }
