--- a/desafios/desafio10-modulo2/style.css
+++ b/desafios/desafio10-modulo2/style.css
@@ -1,136 +1,112 @@
 @charset "UTF-08";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 @font-face {
     font-family: 'Idroid';
     src: url('fontes/idroid.otf') format('opentype');
     font-weight: normal;
-    font-style: normal;
 }
 
-body {
+:root{
+    --cor0: #c5ebd6;
+    --cor1: #83e1ad;
+    --cor2: #3ddc84;
+    --cor3: #2fa866;
+    --cor4: #1a5c37;
+    --cor5: #063d1e; 
+
+    --fonte-padrao: 'Arial', 'Verdana', 'Helvetica', 'sans-serif';
+    --fonte-destaque: 'Bebas Neue', sans-serif;
+    --fonte-idroid: 'Idroid', sans-serif;
+}
+
+*{
     margin: 0px;
-    font-family: Arial, Times, sans-serif;
-    background-color: rgba(132,224,173,255);
+    padding: 0px;
 }
 
 header {
-    height: 200px;
-    background-image: linear-gradient(to top, #1a5736 80%, #3ace80);
-    background-attachment: fixed;
-    box-shadow: 3px 5px 7px 0px rgba(0, 0, 0, 0.315);
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
+    min-height: 150px;
+    text-align: center;
+    padding-top: 30px;
 }
 
-header > nav {
-    margin: 10px;
-    padding-top: 35px;
-    width: 500px;
+nav {
+    background-color: var(--cor5);
+    padding: 10px;
+    box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.267);
 }
 
 nav > a {
+    color: white;
+    padding: 10px;
     text-decoration: none;
     font-weight: bold;
-    color: white;
-    margin-right: 30px;
-    text-shadow: 3px 2px 7px 0px rgba(0, 0, 0, 0.253);
 }
 
-nav > a:hover {
-    text-decoration: underline;
+nav > a:hover{
+    background-color: var(--cor3);
+    color: var(--cor5);
+    border-radius: 5px;
+    transition-duration: 0.5s;
 }
 
-article {
-    background-color: rgb(255, 255, 255);
-    width: 1450px;
+main {
+    background-color: white;
+    min-width: 300px;
+    max-width: 1000px;
     margin: auto;
-    box-shadow: 3px 5px 7px 0px rgba(0, 0, 0, 0.315);
+    padding: 20px;
+    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.123);
+    margin-bottom: 30px;
+    border-radius: 0px 0px 10px 10px;
 }
 
-article#sec {
-    background-color: #1a5c38;
-    width: 1450px;
-    height: 700px;
-    margin: auto;
-    box-shadow: 3px 5px 7px 0px rgba(0, 0, 0, 0.315);
-    padding-top: 0.5px;
+main img{
+    width: 100%;
 }
 
-article#terc {
-    background-color: rgb(255, 255, 255);
-    width: 1450px;
+main img.pequena{
+    width: 50%;
+    display: block;
     margin: auto;
-    box-shadow: 3px 5px 7px 0px rgba(0, 0, 0, 0.315);
-    border-radius: 0px 0px 6px 6px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    margin-bottom: 20px;
 }
 
-div{
-    background-color: #c5ebd6;
-    width: 1420px;
-    margin: auto;
-    padding: 3px 0px 3px 0px;
+body{
+    background-color: var(--cor0);
+    font-family: var(--fonte-padrao);
 }
 
 footer {
-    background-color: rgba(26,92,57,255);
-    padding: 10px;
-    margin: 0px;
+    background-color: var(--cor5);
     color: white;
-    text-align: center;
+}
+
+header > h1 {
+    color: white;
+    font-family: var(--fonte-destaque);
+    margin-bottom: 20px;
+    font-size: 3em;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.281);
+}
+
+header > p {
+    color: white;
+    font-family: var(--fonte-padrao);
+    font-size: 1.2em;
+    max-width: 500px;
     margin: auto;
-    box-shadow: 3px 2px 7px 0px rgba(0, 0, 0, 0.253);
+    padding: 0px 10px 0px 10px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.212);
 }
 
-footer > a {
-    text-decoration: none;
-    font-weight: bold;
-    color: rgb(255, 255, 255);
+main h1 {
+    color: var(--cor5);
+    font-family: var(--fonte-idroid);
 }
 
-footer > a:hover {
-    text-decoration: underline;
-}
-
-h1{
-    text-align: center;
-    color: white;
-    margin-top: 0px;
-    padding: 20px;
-}
-
-h1#h1secundario {
-    color: #277e50;
-    font-family: 'Idroid', Times, serif;
-    text-align: left;
-    font-size: 30px;
-}
-
-h2 {
-    text-align: left;
-    color: #298554;
-    margin-left: 15px;
-    background-color: #e5f6ec;
-    padding-left: 10px;
-    font-family: 'Idroid', Times, serif;
-}
-
-h2#section {
-    font-family: Arial, Times, sans-serif;
-    background-color: #2fa865;
-    color: white;
-    padding: 10px;
-    width: 1400px;
-    border-radius: 6px 6px 0px 0px;
-}
-
-h4 {
-    text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-    color: white;
-}
-
-p {
-    text-align: justify;
-    margin: 15px;
+main h2 {
+    font-family: var(--fonte-idroid);
 }
